--- a/css/style.css
+++ b/css/style.css
@@ -12,11 +12,15 @@
     --bg: #010101;
 }
 
+html {
+    scroll-behavior: smooth;
+}
+
 body {
     font-family: "Poppins", sans-serif;
     background-color: var(--bg);
     color: #fff;
-    min-height: 1500px;
+    /* min-height: 5000px; */
 }
 
 /* navbar */
@@ -138,17 +142,17 @@ body {
     box-shadow: 1px 1px 3px rgba(1, 1, 3, 0.5);
 }
 
-.about {
+.about, .menu, .contact {
     padding: 8rem 7% 1.4rem;
 }
 
-.about h2 {
+.about h2, .menu h2, .contact h2 {
     text-align: center;
     font-size: 2.6rem;
     margin-bottom: 3rem;
 }
 
-.about h2 span, .menu h2 span {
+.about h2 span, .menu h2 span, .contact h2 span {
     color: var(--primary);
 }
 
@@ -167,7 +171,7 @@ body {
 
 .about .content {
     flex: 1 1 35rem;
-    padding: 0 2rem;
+    padding: 0 1rem;
 }
 
 .about .content h3 {
@@ -182,6 +186,107 @@ body {
     line-height: 1.6;
 }
 
+/* Menu Section */
+.menu h2, .contact h2 {
+    margin-top: 1rem;
+}
+
+.menu p, .contact p {
+    text-align: center;
+    max-width: 30rem;
+    margin: auto;
+    font-weight: 100;
+    line-height: 1.6;
+}
+
+.menu .row {
+    display: flex;
+    margin-top: 5rem;
+    justify-content: center;
+}
+
+.menu .row .wor {
+    display: flex;
+    max-width: 1000px;
+    flex-wrap: nowrap;
+    text-align: center;
+    justify-content: center;
+}
+
+.menu .row .menu-card .menu-card-image {
+    border-radius: 50%;
+    width: 50%;
+}
+
+.menu .row .menu-card .menu-card-title {
+    margin: 1rem auto 0.5rem;
+}
+
+/* contact section */
+    .contact .row {
+        display: flex;
+        margin-top: 2rem;
+        background-color: #262626;
+    }
+    .contact .row .map {
+        width: 50%;
+        object-fit: cover;
+    }
+    .contact .row .form .input-group {
+        display: flex;
+        align-items: center;
+        margin-top: 2rem;
+        margin-left: 1rem;
+        width: 100%;
+        background-color: var(--bg);
+        border: 1px solid #eee;
+        padding-left: 2rem;
+    }
+    .contact .row .form .input-group input {
+        width: 100%;
+        margin-left: 2rem;
+        padding: 1.5rem 12rem 1.5rem 2rem;
+        font-size: 1.3rem;
+        background-color: none;
+    }
+    .contact .row .form .btn {
+        margin-top: 2rem;
+        margin-bottom: 1.5rem;
+        display: flex;
+        padding: 1rem 2rem;
+        font-size: 1.3rem;
+        margin-left: 15rem;
+        color: #fff;
+        cursor: pointer;
+        background-color: var(--primary);
+    }
+
+    footer {
+        background-color: var(--primary);
+        text-align: center;
+        padding: 1rem 0.3rem;
+        margin-top: 3rem;
+    }
+    footer .social {
+        padding: 1rem 0;
+    }
+    footer .social a, footer .links a {
+        color: #fff;
+        margin: 1rem;
+    }
+    footer .social a:hover, footer .links a:hover {
+        color: var(--bg);
+    }
+    footer .links {
+        margin-bottom: 1rem;
+    }
+    footer .credit {
+        font-size: 0.8rem;
+    }
+    footer .credit a {
+        color: var(--bg);
+        font-weight: 700;
+    }
 /* media queries */
 /* =========================================== */
 /* laptop */
@@ -294,5 +399,54 @@ body {
 
     .navbar .navbar-nav a:hover::after {
         transform: scaleX(0.2);
+    }
+
+    .menu .row .wor {
+        display: block;
+        font-size: 1rem;
+        max-width: 300px;
+        text-align: center;
+    }
+    .menu .row {
+        margin-top: 0;
+    }
+    .menu p, .contact p {
+        margin-bottom: 5rem;
+        font-size: 1.4rem;
+    }
+    .menu .row .wor .menu-card .menu-card-price {
+        margin-bottom: 2rem;
+    }
+    .menu .row .menu-card .menu-card-title {
+        margin: 0;
+    }
+
+    .contact .row {
+        display: block;
+        margin-top: 2rem;
+        background-color: #262626;
+    }
+    .contact .row .map {
+        width: 100%;
+    }
+    .contact .row .form .input-group {
+        display: flex;
+        align-items: center;
+        margin-top: 2rem;
+        margin-left: 1rem;
+        width: 93%;
+        background-color: var(--bg);
+        border: 1px solid #eee;
+        padding-left: 2rem;
+    }
+    .contact .row .form .input-group input {
+        width: 100%;
+        margin-left: 2rem;
+        padding: 1.5rem 5rem 1.5rem 2rem;
+        font-size: 1.3rem;
+        background-color: none;
+    }
+    .contact .row .form .btn {
+        margin-left: 9.5rem;
     }
 }
